app/globals.css
@import "tailwindcss";

:root {
  --background: #ffffff;
  --foreground: #171717;
}

@theme inline {
  --color-background: var(--background);
  --color-foreground: var(--foreground);
  --font-sans: var(--font-geist-sans);
  --font-mono: var(--font-geist-mono);
}

@media (prefers-color-scheme: dark) {
  :root {
    --background: #0a0a0a;
    --foreground: #ededed;
  }
}

body {
  margin: 0;
  font-family: Arial, Helvetica, sans-serif;

  /* اللون الأساسي للنص */
  color: #0f172a;

  /* الخلفية الجريديانت */
  background: linear-gradient(135deg, #d7f0ff, #ffffff);

  overflow-x: hidden;
}

/* Waves animation */
.wave {
  position: absolute;
  bottom: 0;
  left: 0;
  width: 200%;
  height: 200px;
  background: rgba(0, 150, 255, 0.15);
  border-radius: 40%;
  animation: waveMove 10s linear infinite;
}

.wave:nth-child(2) {
  animation-delay: -5s;
  opacity: 0.3;
}

@keyframes waveMove {
  0% { transform: translateX(0); }
  100% { transform: translateX(-50%); }
}

/* Glass card */
.card {
  background: rgba(255, 255, 255, 0.6);
  backdrop-filter: blur(10px);
  border: 1px solid rgba(119, 117, 236, 0.3);
  border-radius: 12px;
}
@media (max-width: 768px) {
  nav {
    display: none !important;
  }

  button {
    display: block !important;
  }
}
.mouseGlow {
  position: fixed;
left: -999px;
top: -999px;
  width: 320px;
  height: 320px;

  border-radius: 50%;

  pointer-events: none;

  background:
    radial-gradient(
      circle,
      rgba(0,255,200,0.16),
      rgba(0,180,255,0.08),
      transparent 70%
    );

  filter: blur(45px);

  transform: translate(-50%, -50%);

  z-index: 0;

  transition:
    left 0.12s linear,
    top 0.12s linear;
}
.mouseGlowBody {
  position: relative;
}

